<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="P_EnOcean" Id="{d2583012-7b8d-42b3-930e-7213eee0e992}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM P_EnOcean
VAR
	fbKL6581			: FB_KL6581;
	stKL6581_in  AT %I* : KL6581_INPUT;
	stKL6581_out AT %Q*	: KL6581_OUTPUT;
	stKL6581			: STR_KL6581;
	bInitCom			: BOOL := TRUE;
	
	arrEnOcean_Search	: ARRAY [1..8] OF FB_EnOcean_Search;
	nSearchIdx			: BYTE;
	bSerach				: BOOL;
	arrDevices			: ARRAY [1..8] OF INT;
	arrID				: ARRAY [1..8, 0..255] OF DWORD;
	
		//Trykknapper Atrium
	fbAtriumNiveau_Tryk_PladeB				: FB_Rec_RPS_Switch;
	fbAtriumNiveau_Tryk_Sevice				: FB_Rec_RPS_Switch;			

	//Trykknapper på gange

	
	//Trykknapper i rum
	fbRum_5_253_Tryk						: FB_Rec_RPS_Switch;
	fbRum_5_254_Tryk						: FB_Rec_RPS_Switch;	
	fbRum_5_255_Tryk						: FB_Rec_RPS_Switch;	
	fbRum_5_256A_Tryk						: FB_Rec_RPS_Switch;
	fbRum_5_258_Tryk						: FB_Rec_RPS_Switch;
	fbRum_5_259_Tryk						: FB_Rec_RPS_Switch;
	fbRum_5_260A_Tryk						: FB_Rec_RPS_Switch;
	fbRum_5_262_Tryk						: FB_Rec_RPS_Switch;
	fbRum_5_263_Tryk_Pendel						: FB_Rec_RPS_Switch;	
	fbRum_5_263_Tryk						: FB_Rec_RPS_Switch;
	fbRum_5_265_Tryk						: FB_Rec_RPS_Switch;
	fbRum_5_256B_Tryk						: FB_Rec_RPS_Switch;
	fbRum_5_256B_Tryk_pendel				: FB_Rec_RPS_Switch;	
	
	fbRum_6_202_Tryk_1						: FB_Rec_RPS_Switch;
	fbRum_6_202_Tryk_2						: FB_Rec_RPS_Switch;
	fbRum_6_205_Tryk_indgang1_Pendel             : FB_Rec_RPS_Switch;
	fbRum_6_205_Tryk_indgang1             : FB_Rec_RPS_Switch;
	fbRum_6_205_Tryk_indgang2               : FB_Rec_RPS_Switch;
	
	fbRum_6_209_Tryk						: FB_Rec_RPS_Switch;
	fbRum_6_211_Tryk						: FB_Rec_RPS_Switch;
	fbRum_6_212_Tryk						: FB_Rec_RPS_Switch;
    fbRum_6_213_Tryk						: FB_Rec_RPS_Switch;
    fbRum_6_214A_Tryk						: FB_Rec_RPS_Switch;
	fbRum_6_214B_Tryk_Pendel                     : FB_Rec_RPS_Switch;
	fbRum_6_214B_Tryk                     : FB_Rec_RPS_Switch;
    fbRum_6_215_Tryk						: FB_Rec_RPS_Switch; 
    fbRum_6_216A_Tryk						: FB_Rec_RPS_Switch;
    fbRum_6_216B_Tryk						: FB_Rec_RPS_Switch;
    fbRum_6_217_Tryk						: FB_Rec_RPS_Switch;
    fbRum_6_218A_Tryk						: FB_Rec_RPS_Switch;
    fbRum_6_219_Tryk						: FB_Rec_RPS_Switch;
    fbRum_6_220_Tryk						: FB_Rec_RPS_Switch;
    fbRum_6_221_Tryk						: FB_Rec_RPS_Switch;
    fbRum_6_222_Tryk						: FB_Rec_RPS_Switch;

    fbRum_Kantine_Tryk						: FB_Rec_RPS_Switch;
END_VAR

VAR CONSTANT
	byNode_1: BYTE := 1;
	byNode_2: BYTE := 2;
	byNode_3: BYTE := 3;
	byNode_4: BYTE := 4;
	byNode_5: BYTE := 5;
	byNode_6: BYTE := 6;
	byNode_7: BYTE := 7;
	byNode_8: BYTE := 8;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[
(* Kommunikation mit der KL6581. *)
(* Communication with the KL6581. *)
fbKL6581(
	bInit			:= bInitCom,
	nIdx			:= 2,
	stKL6581_in		:= stKL6581_In,
	stKL6581_out	:= stKL6581_Out,
	bReady			=> ,
	bBusy			=> ,
	bError			=> ,
	iErrorID		=> ,
	str_KL6581		=> stKL6581);

GVL_AHDataModbus.EnOceanError	:= TO_UINT(fbKL6581.iErrorID);
(* Warten bis der Kommunikationsbaustein initialisiert wurde.*)
(* Wait until the communication function block has been initialized. *)
IF (NOT fbKL6581.bReady) THEN
	RETURN;
END_IF

FOR nSearchIdx:= 1 TO 8 DO
	arrEnOcean_Search[nSearchIdx](
		bStart:= TRUE, 
		str_KL6581:= stKL6581 , 
		byNode:= nSearchIdx, 
		bReceive=> , 
		iDevices=>arrDevices[nSearchIdx] , 
		ar_ID=> );
		
		MEMCPY(ADR(arrID[nSearchIdx,0]), ADR(arrEnOcean_Search[nSearchIdx].ar_ID), SIZEOF(arrEnOcean_Search[nSearchIdx].ar_ID)); 
END_FOR

//Gange



//RUM
 //
A_Rum_5_253();
A_Rum_5_254();
A_Rum_5_255();
A_Rum_5_256A();
A_Rum_5_258();
A_Rum_5_259();
A_Rum_5_260A();
A_Rum_5_262();
A_Rum_5_263();
A_Rum_5_265();
A_Rum_5_256B();


A_Rum_6_202();
A_Rum_6_205();
A_Rum_6_209();
A_Rum_6_211();
A_Rum_6_212();
A_Rum_6_213();
A_Rum_6_214A();
A_Rum_6_214B();
A_Rum_6_215();
A_Rum_6_216A();
A_Rum_6_216B();
A_Rum_6_217();
A_Rum_6_218A();
A_Rum_6_219();
A_Rum_6_220();
A_Rum_6_221();
A_Rum_6_222();



//AtriumNiveau
A_AtriumNiveau();
]]></ST>
    </Implementation>
    <Action Name="A_AtriumNiveau" Id="{5b863a8e-6cff-4511-86bf-f0a83cf94e37}">
      <Implementation>
        <ST><![CDATA[fbAtriumNiveau_Tryk_PladeB(
	str_KL6581:=stKL6581 , 
	byNode:=2, 
	dw_ID:= 16#0029B92D, 
	str_EnOceanSwitch=> GVL_EnOcean.strEnOceanSwitch_AtriumNiveau_PladeB,
	by_Node=> , 
	bReceive=> );

//knap 2 
(*
fbAtriumNiveau_Tryk_Sevice(
	str_KL6581:=stKL6581 , 
	byNode:=0, 
	dw_ID:= 16#00FEE4FE87, 
	str_EnOceanSwitch=> GVL_EnOcean.strEnOceanSwitch_AtriumNiveau_Service, 
	by_Node=> , 
	bReceive=> );
*)]]></ST>
      </Implementation>
    </Action>
    <Action Name="A_Rum_5_253" Id="{b8d7ccdf-9d9f-49b5-9121-b782b1ceedc4}">
      <Implementation>
        <ST><![CDATA[fbRum_5_253_Tryk(
	str_KL6581:=stKL6581 , 
	byNode:=2 , 
	dw_ID:= 16#00290EEE, 
	str_EnOceanSwitch=> GVL_EnOcean.strEnOceanSwitch_Rum_5_253, 
	by_Node=> , 
	bReceive=> );
]]></ST>
      </Implementation>
    </Action>
    <Action Name="A_Rum_5_254" Id="{c05144aa-8acf-483b-ae3a-190e84aab7e9}">
      <Implementation>
        <ST><![CDATA[fbRum_5_254_Tryk(
	str_KL6581:=stKL6581 , 
	byNode:=2 , 
	dw_ID:= 16#00290EC4, 
	str_EnOceanSwitch=> GVL_EnOcean.strEnOceanSwitch_Rum_5_254, 
	by_Node=> , 
	bReceive=> );
]]></ST>
      </Implementation>
    </Action>
    <Action Name="A_Rum_5_255" Id="{06865b63-8148-4753-9807-6e3039e4da00}">
      <Implementation>
        <ST><![CDATA[fbRum_5_255_Tryk(
	str_KL6581:=stKL6581 , 
	byNode:=2 , 
	dw_ID:= 16#00290ED7, 
	str_EnOceanSwitch=> GVL_EnOcean.strEnOceanSwitch_Rum_5_255, 
	by_Node=> , 
	bReceive=> );
]]></ST>
      </Implementation>
    </Action>
    <Action Name="A_Rum_5_256A" Id="{d1ec70a2-dce3-4586-b30a-a4e85e6cd563}">
      <Implementation>
        <ST><![CDATA[fbRum_5_256A_Tryk(
	str_KL6581:=stKL6581 , 
	byNode:=2 , 
	dw_ID:= 16#00290EDE, 
	str_EnOceanSwitch=> GVL_EnOcean.strEnOceanSwitch_Rum_5_256A, 
	by_Node=> , 
	bReceive=> );
]]></ST>
      </Implementation>
    </Action>
    <Action Name="A_Rum_5_256B" Id="{b5f9f1a1-02a6-4d17-9827-0331f67eece9}">
      <Implementation>
        <ST><![CDATA[fbRum_5_256B_Tryk(
	str_KL6581:=stKL6581 , 
	byNode:=2 , 
	dw_ID:= 16#00290EEA, 
	str_EnOceanSwitch=> GVL_EnOcean.strEnOceanSwitch_Rum_5_256B, 
	by_Node=> , 
	bReceive=> );
	
fbRum_5_256B_Tryk_pendel(
	str_KL6581:=stKL6581 , 
	byNode:=2 , 
	dw_ID:= 16#FEE4FC0F, 
	str_EnOceanSwitch=> GVL_EnOcean.strEnOceanSwitch_Rum_5_256B_pendel, 
	by_Node=> , 
	bReceive=> );
]]></ST>
      </Implementation>
    </Action>
    <Action Name="A_Rum_5_258" Id="{f951736f-085d-4fe8-a85e-a16025814d07}">
      <Implementation>
        <ST><![CDATA[fbRum_5_258_Tryk(
	str_KL6581:=stKL6581 , 
	byNode:=2 , 
	dw_ID:= 16#00290EE7, 
	str_EnOceanSwitch=> GVL_EnOcean.strEnOceanSwitch_Rum_5_258, 
	by_Node=> , 
	bReceive=> );
]]></ST>
      </Implementation>
    </Action>
    <Action Name="A_Rum_5_259" Id="{e80e0d62-cec9-42f9-b557-95805d583c08}">
      <Implementation>
        <ST><![CDATA[fbRum_5_259_Tryk(
	str_KL6581:=stKL6581 , 
	byNode:=2 , 
	dw_ID:= 16#00290ED6, 
	str_EnOceanSwitch=> GVL_EnOcean.strEnOceanSwitch_Rum_5_259, 
	by_Node=> , 
	bReceive=> );
]]></ST>
      </Implementation>
    </Action>
    <Action Name="A_Rum_5_260A" Id="{ad54eeea-c468-4bb5-b40e-dac467db4f05}">
      <Implementation>
        <ST><![CDATA[fbRum_5_260A_Tryk(
	str_KL6581:=stKL6581 , 
	byNode:=2 , 
	dw_ID:= 16#00290ED3, 
	str_EnOceanSwitch=> GVL_EnOcean.strEnOceanSwitch_Rum_5_260A, 
	by_Node=> , 
	bReceive=> );
]]></ST>
      </Implementation>
    </Action>
    <Action Name="A_Rum_5_262" Id="{34962717-3bfe-47f0-894f-a9980f1994b7}">
      <Implementation>
        <ST><![CDATA[fbRum_5_262_Tryk(
	str_KL6581:=stKL6581 , 
	byNode:=2 , 
	dw_ID:= 16#002AC912, 
	str_EnOceanSwitch=> GVL_EnOcean.strEnOceanSwitch_Rum_5_262, 
	by_Node=> , 
	bReceive=> );
]]></ST>
      </Implementation>
    </Action>
    <Action Name="A_Rum_5_263" Id="{b931b9d2-d0be-43a4-b2b7-b0abfea99b41}">
      <Implementation>
        <ST><![CDATA[fbRum_5_263_Tryk_Pendel(
	str_KL6581:=stKL6581 , 
	byNode:=2 , 
	dw_ID:= 16#FEE4ED4B, 
	str_EnOceanSwitch=> GVL_EnOcean.strEnOceanSwitch_Rum_5_263_Pendel, 
	by_Node=> , 
	bReceive=> );

fbRum_5_263_Tryk(
	str_KL6581:=stKL6581 , 
	byNode:=2 , 
	dw_ID:= 16#00290EE0, 
	str_EnOceanSwitch=> GVL_EnOcean.strEnOceanSwitch_Rum_5_263, 
	by_Node=> , 
	bReceive=> );]]></ST>
      </Implementation>
    </Action>
    <Action Name="A_Rum_5_265" Id="{fb3e4e3c-22ff-45c0-9492-35df398f6200}">
      <Implementation>
        <ST><![CDATA[fbRum_5_265_Tryk(
	str_KL6581:=stKL6581 , 
	byNode:=2 , 
	dw_ID:= 16#00290EE5, 
	str_EnOceanSwitch=> GVL_EnOcean.strEnOceanSwitch_Rum_5_265, 
	by_Node=> , 
	bReceive=> );
]]></ST>
      </Implementation>
    </Action>
    <Action Name="A_Rum_6_202" Id="{67ea916b-2088-4eb3-9e68-5573763cfa44}">
      <Implementation>
        <ST><![CDATA[fbRum_6_202_Tryk_1(
	str_KL6581:=stKL6581 , 
	byNode:=2 , 
	dw_ID:= 16#00290EDD, 
	str_EnOceanSwitch=> GVL_EnOcean.strEnOceanSwitch_Rum_6_202_1, 
	by_Node=> , 
	bReceive=> );

fbRum_6_202_Tryk_2(
	str_KL6581:=stKL6581 , 
	byNode:=2 , 
	dw_ID:= 16#00290ECC, 
	str_EnOceanSwitch=> GVL_EnOcean.strEnOceanSwitch_Rum_6_202_2, 
	by_Node=> , 
	bReceive=> );]]></ST>
      </Implementation>
    </Action>
    <Action Name="A_Rum_6_205" Id="{9783011c-f38a-4890-9525-285683aca975}">
      <Implementation>
        <ST><![CDATA[//BT1 invers

fbRum_6_205_Tryk_Indgang1_Pendel(
	str_KL6581:=stKL6581 , 
	byNode:=2 , 
	dw_ID:= 16#FEE78D13, 
	str_EnOceanSwitch=> GVL_EnOcean.strEnOceanSwitch_Rum_6_205_Indgang1_Pendel, 
	by_Node=> , 
	bReceive=> );

//BT2
fbRum_6_205_Tryk_Indgang1(
	str_KL6581:=stKL6581 , 
	byNode:=2 , 
	dw_ID:= 16#008B08A7, 
	str_EnOceanSwitch=> GVL_EnOcean.strEnOceanSwitch_Rum_6_205_Indgang1, 
	by_Node=> , 
	bReceive=> );
	
//Bt i stykker
fbRum_6_205_Tryk_Indgang2(
	str_KL6581:=stKL6581 , 
	byNode:=2 , 
	dw_ID:= 16#0029B91A, 
	str_EnOceanSwitch=> GVL_EnOcean.strEnOceanSwitch_Rum_6_205_Indgang2, 
	by_Node=> , 
	bReceive=> );]]></ST>
      </Implementation>
    </Action>
    <Action Name="A_Rum_6_209" Id="{05ed0612-3bce-45fa-972e-a348c0c3f894}">
      <Implementation>
        <ST><![CDATA[fbRum_6_209_Tryk(
	str_KL6581:=stKL6581 , 
	byNode:=2 , 
	dw_ID:= 16#008B3082, 
	str_EnOceanSwitch=> GVL_EnOcean.strEnOceanSwitch_Rum_6_209, 
	by_Node=> , 
	bReceive=> );

]]></ST>
      </Implementation>
    </Action>
    <Action Name="A_Rum_6_211" Id="{ec912647-ceef-40e0-bf59-7fcccbe3a7f9}">
      <Implementation>
        <ST><![CDATA[fbRum_6_211_Tryk(
	str_KL6581:=stKL6581 , 
	byNode:=2 , 
	dw_ID:= 16#008AD316, 
	str_EnOceanSwitch=> GVL_EnOcean.strEnOceanSwitch_Rum_6_211, 
	by_Node=> , 
	bReceive=> );

]]></ST>
      </Implementation>
    </Action>
    <Action Name="A_Rum_6_212" Id="{3ed8fd79-5e06-4aff-9fcf-7152da9924de}">
      <Implementation>
        <ST><![CDATA[fbRum_6_212_Tryk(
	str_KL6581:=stKL6581 , 
	byNode:=2 , 
	dw_ID:= 16#008AA178, 
	str_EnOceanSwitch=> GVL_EnOcean.strEnOceanSwitch_Rum_6_212, 
	by_Node=> , 
	bReceive=> );

]]></ST>
      </Implementation>
    </Action>
    <Action Name="A_Rum_6_213" Id="{712c2337-3c81-467f-81d6-d6e855fc8a2b}">
      <Implementation>
        <ST><![CDATA[fbRum_6_213_Tryk(
	str_KL6581:=stKL6581 , 
	byNode:=2 , 
	dw_ID:= 16#008B0753, 
	str_EnOceanSwitch=> GVL_EnOcean.strEnOceanSwitch_Rum_6_213, 
	by_Node=> , 
	bReceive=> );

]]></ST>
      </Implementation>
    </Action>
    <Action Name="A_Rum_6_214A" Id="{cd578594-7230-49ca-bdfb-8373139b4762}">
      <Implementation>
        <ST><![CDATA[fbRum_6_214A_Tryk(
	str_KL6581:=stKL6581 , 
	byNode:=2 , 
	dw_ID:= 16#008ADA6D, 
	str_EnOceanSwitch=> GVL_EnOcean.strEnOceanSwitch_Rum_6_214A, 
	by_Node=> , 
	bReceive=> ); 
]]></ST>
      </Implementation>
    </Action>
    <Action Name="A_Rum_6_214B" Id="{fc57503b-cedd-46d2-9be5-90742846a4f7}">
      <Implementation>
        <ST><![CDATA[//BT1 invers

fbRum_6_214B_Tryk_Pendel(
	str_KL6581:=stKL6581 , 
	byNode:=2 , 
	dw_ID:= 16#FEE507F4, 
	str_EnOceanSwitch=> GVL_EnOcean.strEnOceanSwitch_Rum_6_214B_pendel, 
	by_Node=> , 
	bReceive=> );

//BT2
fbRum_6_214B_Tryk(
	str_KL6581:=stKL6581 , 
	byNode:=2 , 
	dw_ID:= 16#008B2F4C, 
	str_EnOceanSwitch=> GVL_EnOcean.strEnOceanSwitch_Rum_6_214B, 
	by_Node=> , 
	bReceive=> );
]]></ST>
      </Implementation>
    </Action>
    <Action Name="A_Rum_6_215" Id="{137c3b59-6550-43d3-9b8d-ed1357043e88}">
      <Implementation>
        <ST><![CDATA[fbRum_6_215_Tryk(
	str_KL6581:=stKL6581 , 
	byNode:=2 , 
	dw_ID:= 16#008AF202, 
	str_EnOceanSwitch=> GVL_EnOcean.strEnOceanSwitch_Rum_6_215, 
	by_Node=> , 
	bReceive=> );

]]></ST>
      </Implementation>
    </Action>
    <Action Name="A_Rum_6_216A" Id="{28e1b5dd-a839-4978-a290-eec485a76f6f}">
      <Implementation>
        <ST><![CDATA[fbRum_6_216A_Tryk(
	str_KL6581:=stKL6581 , 
	byNode:=2 , 
	dw_ID:= 16#008AEF3A, 
	str_EnOceanSwitch=> GVL_EnOcean.strEnOceanSwitch_Rum_6_216A, 
	by_Node=> , 
	bReceive=> );

]]></ST>
      </Implementation>
    </Action>
    <Action Name="A_Rum_6_216B" Id="{c226c8af-aa24-48f5-b8fc-bf8b4cc9be6a}">
      <Implementation>
        <ST><![CDATA[fbRum_6_216B_Tryk(
	str_KL6581:=stKL6581 , 
	byNode:=2 , 
	dw_ID:= 16#008A9376, 
	str_EnOceanSwitch=> GVL_EnOcean.strEnOceanSwitch_Rum_6_216B, 
	by_Node=> , 
	bReceive=> );


]]></ST>
      </Implementation>
    </Action>
    <Action Name="A_Rum_6_217" Id="{521ea17d-2c5d-4672-86a5-91f6c32ed2e2}">
      <Implementation>
        <ST><![CDATA[fbRum_6_217_Tryk(
	str_KL6581:=stKL6581 , 
	byNode:=2 , 
	dw_ID:= 16#008B52E3, 
	str_EnOceanSwitch=> GVL_EnOcean.strEnOceanSwitch_Rum_6_217, 
	by_Node=> , 
	bReceive=> );

]]></ST>
      </Implementation>
    </Action>
    <Action Name="A_Rum_6_218A" Id="{cb2ae255-9cdb-434b-a3e3-886eb04b1c63}">
      <Implementation>
        <ST><![CDATA[fbRum_6_218A_Tryk(
	str_KL6581:=stKL6581 , 
	byNode:=2 , 
	dw_ID:= 16#008B13F7, 
	str_EnOceanSwitch=> GVL_EnOcean.strEnOceanSwitch_Rum_6_218A, 
	by_Node=> , 
	bReceive=> );

]]></ST>
      </Implementation>
    </Action>
    <Action Name="A_Rum_6_219" Id="{e02f28bd-29af-4038-b5d6-ba32bf33b5d2}">
      <Implementation>
        <ST><![CDATA[fbRum_6_219_Tryk(
	str_KL6581:=stKL6581 , 
	byNode:=2 , 
	dw_ID:= 16#00290EF1, 
	str_EnOceanSwitch=> GVL_EnOcean.strEnOceanSwitch_Rum_6_219, 
	by_Node=> , 
	bReceive=> );

]]></ST>
      </Implementation>
    </Action>
    <Action Name="A_Rum_6_220" Id="{5aa2060c-b8fd-4761-aad6-f9efbbece958}">
      <Implementation>
        <ST><![CDATA[fbRum_6_220_Tryk(
	str_KL6581:=stKL6581 , 
	byNode:=2 , 
	dw_ID:= 16#008ADE49, 
	str_EnOceanSwitch=> GVL_EnOcean.strEnOceanSwitch_Rum_6_220, 
	by_Node=> , 
	bReceive=> );

]]></ST>
      </Implementation>
    </Action>
    <Action Name="A_Rum_6_221" Id="{6a4bb295-6635-421c-9b09-83634f3def7e}">
      <Implementation>
        <ST><![CDATA[fbRum_6_221_Tryk(
	str_KL6581:=stKL6581 , 
	byNode:=2 , 
	dw_ID:= 16#00290EBD, 
	str_EnOceanSwitch=> GVL_EnOcean.strEnOceanSwitch_Rum_6_221, 
	by_Node=> , 
	bReceive=> );

]]></ST>
      </Implementation>
    </Action>
    <Action Name="A_Rum_6_222" Id="{4ba348d3-dd54-40c1-ad0a-25ca3bd628f8}">
      <Implementation>
        <ST><![CDATA[fbRum_6_222_Tryk(
	str_KL6581:=stKL6581 , 
	byNode:=2 , 
	dw_ID:= 16#008B43F7, 
	str_EnOceanSwitch=> GVL_EnOcean.strEnOceanSwitch_Rum_6_222, 
	by_Node=> , 
	bReceive=> );

]]></ST>
      </Implementation>
    </Action>
  </POU>
</TcPlcObject>